--- a/Modulo-02/aula05.html
+++ b/Modulo-02/aula05.html
@@ -20,8 +20,10 @@
                     return 'goiaba';
                 }
             }
-            var nome = pegarNome(123);
+            var nome = pegarNome(1);
+            var idade = 20
             console.log(nome);
+            console.log(tests2(nome,idade));
         
         </script>
     </body>
