--- a/Modulo-OO-JS/objects.html
+++ b/Modulo-OO-JS/objects.html
@@ -5,6 +5,7 @@
 </head>
 <body>
         <script>
+            //Objetos na prática
             var objects = [{
                 "nome": "Gabriel",
                 "idade": 20,
